[dispatch-portal] Change cancel request to delete method instead of get
